--- a/bintray_properties.gradle
+++ b/bintray_properties.gradle
@@ -1,3 +1,6 @@
+if(!project.hasProperty('BINTRAY_USER')) project.ext.BINTRAY_USER = System.getenv("BINTRAY_USER")
+if(!project.hasProperty('BINTRAY_KEY')) project.ext.BINTRAY_KEY = System.getenv("BINTRAY_KEY")
 if(!project.hasProperty('ARTIFACT_GROUP')) project.ext.ARTIFACT_GROUP = 'com.isapp.kontroller'
 if(!project.hasProperty('BINTRAY_REPO')) project.ext.BINTRAY_REPO = 'kontroller'
 if(!project.hasProperty('BINTRAY_ORG')) project.ext.BINTRAY_ORG = 'isapp'
+if(!project.hasProperty('ARTIFACT_VERSION')) project.ext.ARTIFACT_VERSION = '0.0.1-SNPASHOT'
