--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ task clean(type: Delete) {
   delete rootProject.buildDir
 }
 
-project.ext.preDexLibs = !project.hasProperty('disablePreDex')
+project.ext.preDexLibs = !(System.getenv("CI") ?: "false" .toBoolean())
 
 subprojects {
   project.plugins.whenPluginAdded { plugin ->
