--- a/kontroller-android/build.gradle
+++ b/kontroller-android/build.gradle
@@ -32,7 +32,8 @@ android {
 
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  compile 'com.android.support:support-annotations:25.1.1'
+  compile 'com.android.support:support-fragment:25.1.1'
+
 
   testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   testCompile 'junit:junit:4.12'
