--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
   compileSdkVersion 25
   buildToolsVersion "25.0.2"
   defaultConfig {
     applicationId "com.isapp.kontroller"
-    minSdkVersion 14
+    minSdkVersion 15
     targetSdkVersion 25
     versionCode 1
     versionName "1.0"
@@ -20,10 +21,7 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
   compile 'com.android.support:appcompat-v7:25.1.1'
-  testCompile 'junit:junit:4.12'
+
+  compile project(':kontroller-android')
 }
