--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:2.2.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.13'
+    // classpath 'org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.13'
   }
 }
 
