--- a/kontroller-anko/build.gradle
+++ b/kontroller-anko/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'org.jetbrains.dokka-android'
+// apply plugin: 'org.jetbrains.dokka-android'
 
 buildscript {
   dependencies {
@@ -31,17 +31,17 @@ android {
   }
 }
 
-dokka {
-  outputFormat = 'javadoc'
-  outputDirectory = "$buildDir/javadoc"
-  processConfigurations = ['compile', 'provided']
-
-  linkMapping {
-    dir = "src/main/java"
-    url = "https://github.com/isapp/kontroller/blob/master/kontroller-anko/src/main/java"
-    suffix = "#L"
-  }
-}
+//dokka {
+//  outputFormat = 'javadoc'
+//  outputDirectory = "$buildDir/javadoc"
+//  processConfigurations = ['compile', 'provided']
+//
+//  linkMapping {
+//    dir = "src/main/java"
+//    url = "https://github.com/isapp/kontroller/blob/master/kontroller-anko/src/main/java"
+//    suffix = "#L"
+//  }
+//}
 
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
