Remove dokka property so we don't try to use the task

--- a/bintray_properties.gradle
+++ b/bintray_properties.gradle
@@ -15,4 +15,4 @@ public String loadVersion() {
   return versionProperties.getProperty('VERSION')
 }
 
-project.ext.USE_DOKKA = true
+// project.ext.USE_DOKKA = true
