First pass at horizontal scrolling chips

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,7 @@ android {
 dependencies {
   compile deps.kotlin
   compile deps.appCompat
+  compile deps.design
+
+  compile project(":library")
 }
