--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: required
 
 language: android
 
+# hopefully fixes the "fatal: git fetch-pack: expected shallow list" error
+# https://github.com/travis-ci/travis-ci/issues/4942#issuecomment-159132444
+git:
+  depth: 99999
+
 android:
   components:
     - tools
