--- a/kontroller-android/build.gradle
+++ b/kontroller-android/build.gradle
@@ -11,12 +11,12 @@ buildscript {
 }
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.2"
+  compileSdkVersion rootProject.ext.compileSdk
+  buildToolsVersion rootProject.ext.buildToolsVersion
 
   defaultConfig {
-    minSdkVersion 15
-    targetSdkVersion 25
+    minSdkVersion rootProject.ext.minSdk
+    targetSdkVersion rootProject.ext.targetSdk
     versionCode 1
     versionName "1.0"
 
@@ -44,15 +44,14 @@ android {
 //}
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  compile 'com.android.support:support-fragment:25.3.0'
+  compile deps.kotlin
+  compile deps.supportFragment
 
-
-  testCompile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.robolectric:robolectric:3.2.2'
-  testCompile 'org.mockito:mockito-core:2.7.2'
-  testCompile('com.nhaarman:mockito-kotlin:1.2.0') {
+  testCompile deps.kotlin
+  testCompile deps.junit
+  testCompile deps.robolectric
+  testCompile deps.mockito
+  testCompile(deps.mockitoKotlin) {
     exclude group: "org.mockito"
   }
 }
